2019-12-21
==========
    1. Took advantage of https://nuget.org; renamed to TauCode.Extensions.

2020-10-10
==========
    1. Took advantage of Azure DevOps. Refactoring.

2020-11-14
==========
    1. Huge dev refactoring.

2021-03-01
==========
    1. Resurrection.