@@ -13,3 +13,7 @@
 2021-03-01
 ==========
     1. Resurrection.
+
+2021-04-17
+==========
+    1. Added: public static DateTimeOffset CutDateOffset(this DateTimeOffset dateTimeOffset)
